@@ -10,7 +10,6 @@ import com.google.common.collect.ImmutableSet;
 import java.sql.Timestamp;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -38,7 +37,6 @@ import org.pmiops.workbench.db.model.DbUser;
 import org.pmiops.workbench.db.model.DbWorkspace;
 import org.pmiops.workbench.model.BillingStatus;
 import org.pmiops.workbench.model.ResearchPurpose;
-import org.pmiops.workbench.model.SpecificPopulationEnum;
 import org.pmiops.workbench.model.Workspace;
 import org.pmiops.workbench.model.WorkspaceAccessLevel;
 import org.pmiops.workbench.utils.mappers.CommonMappers;
@@ -104,7 +102,7 @@ public class WorkspaceAuditorTest {
             .otherPurpose(true)
             .otherPurposeDetails("deriving lottery numbers")
             .ethics(false)
-            .populationDetails(List.of(SpecificPopulationEnum.AGE_CHILDREN))
+            .populationDetails(Collections.emptyList())
             .populationHealth(true)
             .reasonForAllOfUs("the biggest data")
             .reviewRequested(false)
